--- a/languages/bp-forum-notifier-sv_SE.po
+++ b/languages/bp-forum-notifier-sv_SE.po
@@ -5,16 +5,16 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-11-26 14:43+0100\n"
-"PO-Revision-Date: 2012-11-26 14:52+0100\n"
-"Last-Translator: spurge <olof@klandestino.se>\n"
+"PO-Revision-Date: 2013-07-18 12:30-0000\n"
+"Last-Translator: Hugh Topping\n"
 "Language-Team: \n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 1.5.7\n"
 
 #: templates/bp-forum-notifier-admin.php:4
 msgid "Delay in minutes before e-mails are sent"
@@ -22,7 +22,8 @@ msgstr "Fördröjning i minuter innan e-post skickas"
 
 #: templates/bp-forum-notifier-admin.php:5
 msgid "E-mail subject when message contains multiple forum activities"
-msgstr "Ämnesraden i e-posten när meddelandet innehåller flera olika forumaktiviteter"
+msgstr ""
+"Ämnesraden i e-posten när meddelandet innehåller flera olika forumaktiviteter"
 
 #: templates/bp-forum-notifier-admin.php:5
 #, php-format
@@ -71,7 +72,8 @@ msgstr "Svarsnotifikation som e-post, meddelande"
 #: templates/bp-forum-notifier-admin.php:20
 #, php-format
 msgid "%1$s = author, %2$s = topic title, %3$s = reply, %4$s = topic link"
-msgstr "%1$s = författare, %2$s = trådens titel, %3$s = svaret, %4$s = trådens länk"
+msgstr ""
+"%1$s = författare, %2$s = trådens titel, %3$s = svaret, %4$s = trådens länk"
 
 #: templates/bp-forum-notifier-admin.php:11
 msgid "Topic notification (single topic)"
@@ -145,8 +147,7 @@ msgstr "E-postmeddelandets omslutning"
 msgid "%1$s = message bodies"
 msgstr "%1$s = meddelanden"
 
-#: templates/bp-forum-notifier-admin.php:26
-#: includes/admin.php:73
+#: templates/bp-forum-notifier-admin.php:26 includes/admin.php:73
 msgid "Forum Notifier Settings"
 msgstr "Forumnotifieringsinställningar"
 
@@ -291,14 +292,13 @@ msgstr ""
 "\n"
 "--------------------\n"
 "\n"
-"Detta meddelande går inte att svara på... För att svara på detta foruminlägg, klicka på länken ovan."
+"Detta meddelande går inte att svara på... För att svara på detta "
+"foruminlägg, klicka på länken ovan."
 
-#: includes/admin.php:74
-#: includes/notifier.php:28
+#: includes/admin.php:74 includes/notifier.php:28
 msgid "Forum Notifier"
 msgstr "Forumnotifieringar"
 
 #: includes/admin.php:111
 msgid "Settings updated."
 msgstr "Inställningar uppdaterade."
-
